pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec-110-indented_code_blocks.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/110-indented_code_blocks.md
---

[33m[48;5;236m<a/>[K[0m
[33m[48;5;236m*hi*[K[0m
[33m[48;5;236m[K[0m
[33m[48;5;236m- one[K[0m
