pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec-111-indented_code_blocks.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/111-indented_code_blocks.md
---

[33mchunk1
[0m[33m
[0m[33mchunk2
[0m[33m
[0m[33m
[0m[33m
[0m[33mchunk3
[0m
